--- a/index.html
+++ b/index.html
@@ -33,6 +33,52 @@
         </div>
     </div>
     <button class="start-btn">Start</button>
+    <div class="extra-content">
+        <h2>Additional Information</h2>
+        <p>This section provides more details about the quiz and its functionalities.</p>
+        <ul>
+            <li>Point 1: Explanation about the quiz</li>
+            <li>Point 2: Instructions for use</li>
+            <li>Point 3: Tips for best results</li>
+        </ul>
+        <h3>More Details</h3>
+        <div>
+            <ol>
+                <li>Step 1: Begin here</li>
+                <li>Step 2: Follow these instructions</li>
+                <li>Step 3: Complete the process</li>
+            </ol>
+        </div>
+       
+    </div>
+    <div class="additional-quiz-section">
+        <h2>Sample Questions</h2>
+        <div class="sample-question">
+            <p><strong>Question 1:</strong> What is the capital of France?</p>
+            <button class="btn">Paris</button>
+            <button class="btn">London</button>
+            <button class="btn">Berlin</button>
+            <button class="btn">Madrid</button>
+        </div>
+        <div class="sample-question">
+            <p><strong>Question 2:</strong> What is the largest planet in our solar system?</p>
+            <button class="btn">Earth</button>
+            <button class="btn">Mars</button>
+            <button class="btn">Jupiter</button>
+            <button class="btn">Saturn</button>
+        </div>
+        <div class="sample-question">
+            <p><strong>Question 3:</strong> Who wrote "To Kill a Mockingbird"?</p>
+            <button class="btn">Harper Lee</button>
+            <button class="btn">Mark Twain</button>
+            <button class="btn">Ernest Hemingway</button>
+            <button class="btn">F. Scott Fitzgerald</button>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Quiz App. All rights reserved.</p>
+        <p>Contact us at: <a href="mailto:info@quizapp.com">info@quizapp.com</a></p>
+    </footer>
 </main>
 <script src="script.js"></script>
 </body>
